cabal-version: 3.4
name: AOC2024
version: 0.1.0.0
-- A short (one-line) description of the package.
-- synopsis:
-- A longer description of the package.
-- description:
-- A URL where users can report bugs.
-- bug-reports:
-- The license under which the package is released.
-- license:
author: alex800121
maintainer: alex800121@hotmail.com
-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared
  default-language: GHC2021
  build-depends:
    AOC,
    array,
    base >=4.18,
    containers,
    either,
    ghc-typelits-knownnat ^>=0.7,
    heftia-effects ,
    megaparsec,
    multiset,
    parallel,
    parser-combinators,
    pqueue,
    random,
    split,
    unordered-containers,
    vector,

  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DefaultSignatures
    DerivingStrategies
    FunctionalDependencies
    LambdaCase
    PartialTypeSignatures
    PatternSynonyms
    RecordWildCards
    TemplateHaskell
    TypeFamilies

  -- ghc-options: -threaded -rtsopts "-with-rtsopts=-N -T" -fplugin GHC.TypeLits.KnownNat.Solver -O2
  ghc-options:
    -fplugin
    GHC.TypeLits.KnownNat.Solver
    -fllvm
    -O2

benchmark main-bench
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is: AOCBench.hs
  build-depends:
    AOC,
    AOC2024,
    base,
    criterion,

  default-language: GHC2021
  -- ghc-options: -threaded -rtsopts "-with-rtsopts=-N -T"  -O2
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -T"
    -fllvm
    -O2

library
  import: shared
  exposed-modules:
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9
    Main

  -- Modules included in this library but not exported.
  other-modules:
    Paths_AOC2024

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  hs-source-dirs:
    src
    app

executable AOC2024
  import: shared
  main-is: Main.hs
  -- Modules included in this executable, other than Main.
  other-modules:
    Day1
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day2
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9
    Paths_AOC2024

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  -- build-depends:
  --     AOC2020
  -- ghc-options: -threaded -rtsopts "-with-rtsopts=-N -T" -fplugin GHC.TypeLits.KnownNat.Solver  -O2
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -T"
    -fplugin
    GHC.TypeLits.KnownNat.Solver
    -fllvm
    -O2

  hs-source-dirs:
    app
    src
